Curve modifier not taken into account when curve is created from mesh #42952

Closed
opened 2014-12-18 21:24:10 +01:00 by Julien Duroure · 7 comments
Member

System Information
Ubuntu 14.04

Blender Version
Broken: 2.72b, same with current git 27b58f0

Short description of error
Curve modifier not taken into account when curve is created from mesh

Exact steps for others to reproduce the error

  • delete default cube
  • add Suzanne
  • add Bezier curve
  • convert curve to mesh ( Alt C )
  • convert back mesh to curve (Alt C)
  • select Suzanne
  • add Curve modifier, set Objet to Bezier Curve
    • Curve not taken into account

But :

  • select Curve
  • Enter edit mode
  • Exit edit mode
    • Now Curve modifier is OK

Can't attach a .blend file because all is working fine when exiting / opening again file.

Don't hesitate to contact me if you need more information

**System Information** Ubuntu 14.04 **Blender Version** Broken: 2.72b, same with current git 27b58f0 **Short description of error** Curve modifier not taken into account when curve is created from mesh **Exact steps for others to reproduce the error** - delete default cube - add Suzanne - add Bezier curve - convert curve to mesh ( Alt C ) - convert back mesh to curve (Alt C) - select Suzanne - add Curve modifier, set Objet to Bezier Curve - > Curve not taken into account But : - select Curve - Enter edit mode - Exit edit mode - > Now Curve modifier is OK Can't attach a .blend file because all is working fine when exiting / opening again file. Don't hesitate to contact me if you need more information
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JulienDuroure

Added subscriber: @JulienDuroure
Sergey Sharybin was assigned by Bastien Montagne 2014-12-19 09:28:29 +01:00

Added subscriber: @mont29

Added subscriber: @mont29

Probably another case of curve cache missing update? Sergey should know. :)

Probably another case of curve cache missing update? Sergey should know. :)

This issue was referenced by 646a96bf8e

This issue was referenced by 646a96bf8edc211a06f3df652101c265ee166e8d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 646a96bf8e.

Closed by commit 646a96bf8e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42952
No description provided.